--- a/_site.yml
+++ b/_site.yml
@@ -7,4 +7,4 @@ navbar:
     - text: "CLT"
       href: CLT_2.html
     - text: "Case Study 1"
-      href: caseStudy1Missing.pdf
+      href: caseStudy1Missing.html
