Added tab to connect to Decision Tree

--- a/_site.yml
+++ b/_site.yml
@@ -5,6 +5,7 @@ navbar:
   left:
     - text: "Home"
       href: index.html
-
+    - text: "Decision Tree Predicts Attrition"
+      href: employeesRF.html
     
     
