--- a/_site.yml
+++ b/_site.yml
@@ -5,7 +5,8 @@ navbar:
   left:
     - text: "Home"
       href: index.html
-    - text: "Decision Tree Predicts Attrition"
+    - text: "Case Study"
+      href: index.html
       
     
     
